fixed bug on add handles to edge, used JML contracts on CALabel,
OpenJML requires Java 1.8, so reverted back to JDK 1.8 for
compatibility.