@@ -1,10 +1,11 @@
 package MSCA;
-import static java.util.stream.Collectors.flatMapping;
+//import static java.util.stream.Collectors.flatMapping;
 import static java.util.stream.Collectors.groupingByConcurrent;
 import static java.util.stream.Collectors.mapping;
 import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
+import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
@@ -35,6 +36,7 @@ import CA.CAState;
  */
 public class MSCA
 { 
+
 	private int rank;
 
 	private int[][] finalstates; //these are the final states of the principal in the contract automaton
@@ -42,7 +44,6 @@ public class MSCA
 	//this is the only information of the CAState we need
 	//this cannot be retrieved from CAState[] states because of conjunction and the usage of int[] for 
 	//composed state
-
 
 	private Set<? extends MSCATransition> tra;
 	private Set<CAState> states; //all the states of the automaton
@@ -348,6 +349,7 @@ public class MSCA
 	 * @param bound  the bound on the depth of the visit
 	 * @return  the composed automaton
 	 */
+	//TODO study non-associative composition but all-at-once
 	public static MSCA composition(List<MSCA> aut, Predicate<MSCATransition> pruningPred, Integer bound)
 	{
 		//each transition of each MSCA in aut is associated with the corresponding index in aut
@@ -359,6 +361,7 @@ public class MSCA
 				this.ind=i;
 			}
 		}
+
 		int rank=aut.stream()
 				.map(MSCA::getRank)
 				.collect(Collectors.summingInt(Integer::intValue));
@@ -369,8 +372,9 @@ public class MSCA
 				.collect(Collectors.toList());
 		CAState initialstate = new CAState(initial);
 
-		Queue<Entry<List<CAState>,Integer>> toVisit = new ConcurrentLinkedQueue<Entry<List<CAState>,Integer>>(List.of(Map.entry(initial,0)));
-		ConcurrentMap<List<CAState>, CAState> operandstat2compstat = new ConcurrentHashMap<List<CAState>, CAState>(Map.of(initial, initialstate));//used to avoid duplicate target states 
+		Queue<Entry<List<CAState>,Integer>> toVisit = new ConcurrentLinkedQueue<Entry<List<CAState>,Integer>>(Arrays.asList(new AbstractMap.SimpleEntry<>(initial, 0)));//List.of(Map.entry(initial,0)));
+		ConcurrentMap<List<CAState>, CAState> operandstat2compstat = new ConcurrentHashMap<List<CAState>, CAState>();//);Map.of(initial, initialstate));
+		operandstat2compstat.put(initial, initialstate);//used to avoid duplicate target states 
 		Set<MSCATransition> tr = new HashSet<MSCATransition>();//transitions of the composed automaton to build
 		Set<List<CAState>> visited = new HashSet<List<CAState>>();
 		Queue<CAState> dontvisit = new ConcurrentLinkedQueue<CAState>();
@@ -395,53 +399,54 @@ public class MSCA
 				//firstly match transitions are generated
 				Map<MSCATransition, List<Entry<MSCATransition,List<CAState>>>> matchtransitions=
 						trans2index.parallelStream()
-						.collect(flatMapping(e -> trans2index.parallelStream()
+						.flatMap(e -> trans2index.parallelStream()
 								.filter(ee->(e.ind<ee.ind) && CALabel.match(e.tra.getLabel(), ee.tra.getLabel()))
 								.flatMap(ee->{ 
 									List<CAState> targetlist =  new ArrayList<CAState>(source);
 									targetlist.set(e.ind, e.tra.getTarget());
 									targetlist.set(ee.ind, ee.tra.getTarget());
-									
+
 									MSCATransition tradd=new MSCATransition(sourcestate,
 											e.tra.getLabel().isOffer(), //since e.ind<ee.ind true if e is offer
 											(e.tra.getLabel().isOffer())?e.tra.getLabel().getAction():ee.tra.getLabel().getAction(),//offer action
-											operandstat2compstat.computeIfAbsent(targetlist, v->new CAState(v)), 
-											e.tra.isNecessary()?e.tra.getModality():ee.tra.getModality());
+													operandstat2compstat.computeIfAbsent(targetlist, v->new CAState(v)), 
+													e.tra.isNecessary()?e.tra.getModality():ee.tra.getModality());
 
 									return Stream.of((Entry<MSCATransition, Entry<MSCATransition,List<CAState>>>) 
-											Map.entry(e.tra, Map.entry(tradd,targetlist)),
+											new AbstractMap.SimpleEntry<MSCATransition, Entry<MSCATransition,List<CAState>>>(e.tra, 
+													new AbstractMap.SimpleEntry<MSCATransition,List<CAState>>(tradd,targetlist)),
 											(Entry<MSCATransition, Entry<MSCATransition,List<CAState>>>)//dummy, ee.tra is matched
-											Map.entry(ee.tra, Map.entry(tradd, (List<CAState>)new ArrayList<CAState>())));
-								}), 
+											new AbstractMap.SimpleEntry<MSCATransition, Entry<MSCATransition,List<CAState>>>(ee.tra, 
+													new AbstractMap.SimpleEntry<MSCATransition,List<CAState>>(tradd, (List<CAState>)new ArrayList<CAState>())));
+								}))
+						.collect( 
 								groupingByConcurrent(Entry::getKey, 
 										mapping(Entry::getValue,toList()))//each principal transition can have more matches
-								));
+								);
 
 				//collecting match transitions and adding unmatched transitions
 				Set<Entry<MSCATransition,List<CAState>>> trmap=
 						trans2index.parallelStream()
 						.filter(e->!matchtransitions.containsKey(e.tra))//transitions not matched
-						.collect(Collectors.collectingAndThen(
-								mapping(e->{List<CAState> targetlist = new ArrayList<CAState>(source);
-								targetlist.set(e.ind, e.tra.getTarget());
-								return 
-										Map.entry((!e.tra.getLabel().isMatch())?
-												new MSCATransition(sourcestate,  
-														e.tra.getLabel().getAction(),
-														operandstat2compstat.computeIfAbsent(targetlist, v->new CAState(v)),
-														e.tra.getModality())
-												:new MSCATransition(sourcestate, 
-														e.tra.getLabel().getOfferer()<e.tra.getLabel().getRequester(), 
-														e.tra.getLabel().getAction(),
-														operandstat2compstat.computeIfAbsent(targetlist, v->new CAState(v)),
-													 	e.tra.getModality()),
-												targetlist);},
-										toSet()),
-								trm->{trm.addAll(matchtransitions.values().parallelStream()//matched transitions
-										.flatMap(List::parallelStream)
-										.filter(e->(!e.getValue().isEmpty())) //no duplicates
-										.collect(toSet()));
-								return trm;}));
+						.collect(mapping(e->{List<CAState> targetlist = new ArrayList<CAState>(source);
+						targetlist.set(e.ind, e.tra.getTarget());
+						return 	new AbstractMap.SimpleEntry<MSCATransition,List<CAState>>
+						((!e.tra.getLabel().isMatch())?
+								new MSCATransition(sourcestate,  
+										e.tra.getLabel().getAction(),
+										operandstat2compstat.computeIfAbsent(targetlist, v->new CAState(v)),
+										e.tra.getModality())
+								:new MSCATransition(sourcestate, 
+										e.tra.getLabel().getOfferer()<e.tra.getLabel().getRequester(), 
+										e.tra.getLabel().getAction(),
+										operandstat2compstat.computeIfAbsent(targetlist, v->new CAState(v)),
+										e.tra.getModality()),
+								targetlist);},
+								toSet()));
+				trmap.addAll(matchtransitions.values().parallelStream()//matched transitions
+						.flatMap(List::parallelStream)
+						.filter(e->(!e.getValue().isEmpty())) //no duplicates
+						.collect(toSet()));
 
 				if (trmap.parallelStream()//don't visit target states if they are bad
 						.anyMatch(x->pruningPred!=null&&pruningPred.test(x.getKey())&&x.getKey().isUrgent()))
@@ -451,22 +456,23 @@ public class MSCA
 					continue;
 				}
 				else {//adding transitions, updating states
-					tr.addAll(trmap.parallelStream()
+					Set<MSCATransition> trans=trmap.parallelStream()
 							.filter(x->pruningPred==null||x.getKey().isNecessary()||pruningPred.negate().test(x.getKey()))//semicontrollable are not pruned
-							.collect(Collectors.teeing(
-									mapping((Entry<MSCATransition, List<CAState>> e)-> e.getKey(),toSet()), 
-									mapping((Entry<MSCATransition, List<CAState>> e)-> e.getValue(),toSet()), 
-									(trans,toVis)->{
-										toVisit.addAll(toVis.parallelStream()
-												.map(s->Map.entry(s,sourceEntry.getValue()+1))
-												.collect(toSet()));
-										if (pruningPred!=null)//avoid visiting targets of semicontrollable bad transitions
-											dontvisit.addAll(trans.parallelStream()
-													.filter(x->x.isSemiControllable()&&pruningPred.test(x))
-													.map(MSCATransition::getTarget)
-													.collect(toList()));
-										return trans;
-									})));
+							.collect(mapping((Entry<MSCATransition, List<CAState>> e)-> e.getKey(),toSet()));
+					tr.addAll(trans);
+
+					if (pruningPred!=null)//avoid visiting targets of semicontrollable bad transitions
+						dontvisit.addAll(trans.parallelStream()
+								.filter(x->x.isSemiControllable()&&pruningPred.test(x))
+								.map(MSCATransition::getTarget)
+								.collect(toList()));
+
+					toVisit.addAll(trmap.parallelStream()
+							.filter(x->pruningPred==null||x.getKey().isNecessary()||pruningPred.negate().test(x.getKey()))//semicontrollable are not pruned
+							.collect(mapping((Entry<MSCATransition, List<CAState>> e)-> e.getValue(),toSet()))
+							.parallelStream()
+							.map(s->new AbstractMap.SimpleEntry<List<CAState>,Integer>(s,sourceEntry.getValue()+1))
+							.collect(toSet()));
 				}
 			}
 		} while (!toVisit.isEmpty());
@@ -482,6 +488,7 @@ public class MSCA
 				.collect(Collectors.toSet());
 		return new MSCA(rank, initialstate, finalstates, tr, states);
 	}
+
 
 	/**
 	 * 
@@ -920,3 +927,142 @@ public class MSCA
 //		return map;
 //	}
 
+
+//
+//  **this is the composition method using Java 15, I translated back to Java 8 to use JML**
+//
+//	public static MSCA composition(List<MSCA> aut, Predicate<MSCATransition> pruningPred, Integer bound)
+//	{
+//		//each transition of each MSCA in aut is associated with the corresponding index in aut
+//		final class FMCATransitionIndex {//more readable than Entry
+//			MSCATransition tra;
+//			Integer ind;
+//			public FMCATransitionIndex(MSCATransition tr, Integer i) {
+//				this.tra=tr; //different principals may have equal transitions
+//				this.ind=i;
+//			}
+//		}
+//		
+//		int rank=aut.stream()
+//				.map(MSCA::getRank)
+//				.collect(Collectors.summingInt(Integer::intValue));
+//
+//		List<CAState> initial = aut.stream()  
+//				.flatMap(a -> a.getStates().stream())
+//				.filter(CAState::isInitial)
+//				.collect(Collectors.toList());
+//		CAState initialstate = new CAState(initial);
+//
+//		Queue<Entry<List<CAState>,Integer>> toVisit = new ConcurrentLinkedQueue<Entry<List<CAState>,Integer>>(List.of(Map.entry(initial,0)));
+//		ConcurrentMap<List<CAState>, CAState> operandstat2compstat = new ConcurrentHashMap<List<CAState>, CAState>(Map.of(initial, initialstate));//used to avoid duplicate target states 
+//		Set<MSCATransition> tr = new HashSet<MSCATransition>();//transitions of the composed automaton to build
+//		Set<List<CAState>> visited = new HashSet<List<CAState>>();
+//		Queue<CAState> dontvisit = new ConcurrentLinkedQueue<CAState>();
+//
+//		do {
+//			Entry<List<CAState>,Integer> sourceEntry=toVisit.remove(); //pop state to visit
+//			if (visited.add(sourceEntry.getKey())&&sourceEntry.getValue()<bound) //if states has not been visited so far
+//			{
+//				List<CAState> source =sourceEntry.getKey();
+//				CAState sourcestate= operandstat2compstat.get(source);
+//				if (dontvisit.remove(sourcestate))
+//					continue;//was target of a semicontrollable bad transition
+//
+//				List<FMCATransitionIndex> trans2index = IntStream.range(0,aut.size())
+//						.mapToObj(i->aut.get(i)
+//								.getForwardStar(source.get(i))
+//								.parallelStream()
+//								.map(t->new FMCATransitionIndex(t,i)))
+//						.flatMap(Function.identity())
+//						.collect(toList()); //indexing outgoing transitions of each operand, used for target states and labels
+//
+//				//firstly match transitions are generated
+//				Map<MSCATransition, List<Entry<MSCATransition,List<CAState>>>> matchtransitions=
+//						trans2index.parallelStream()
+//						.collect(flatMapping(e -> trans2index.parallelStream()
+//								.filter(ee->(e.ind<ee.ind) && CALabel.match(e.tra.getLabel(), ee.tra.getLabel()))
+//								.flatMap(ee->{ 
+//									List<CAState> targetlist =  new ArrayList<CAState>(source);
+//									targetlist.set(e.ind, e.tra.getTarget());
+//									targetlist.set(ee.ind, ee.tra.getTarget());
+//									
+//									MSCATransition tradd=new MSCATransition(sourcestate,
+//											e.tra.getLabel().isOffer(), //since e.ind<ee.ind true if e is offer
+//											(e.tra.getLabel().isOffer())?e.tra.getLabel().getAction():ee.tra.getLabel().getAction(),//offer action
+//											operandstat2compstat.computeIfAbsent(targetlist, v->new CAState(v)), 
+//											e.tra.isNecessary()?e.tra.getModality():ee.tra.getModality());
+//
+//									return Stream.of((Entry<MSCATransition, Entry<MSCATransition,List<CAState>>>) 
+//											Map.entry(e.tra, Map.entry(tradd,targetlist)),
+//											(Entry<MSCATransition, Entry<MSCATransition,List<CAState>>>)//dummy, ee.tra is matched
+//											Map.entry(ee.tra, Map.entry(tradd, (List<CAState>)new ArrayList<CAState>())));
+//								}), 
+//								groupingByConcurrent(Entry::getKey, 
+//										mapping(Entry::getValue,toList()))//each principal transition can have more matches
+//								));
+//
+//				//collecting match transitions and adding unmatched transitions
+//				Set<Entry<MSCATransition,List<CAState>>> trmap=
+//						trans2index.parallelStream()
+//						.filter(e->!matchtransitions.containsKey(e.tra))//transitions not matched
+//						.collect(Collectors.collectingAndThen(
+//								mapping(e->{List<CAState> targetlist = new ArrayList<CAState>(source);
+//								targetlist.set(e.ind, e.tra.getTarget());
+//								return 
+//										Map.entry((!e.tra.getLabel().isMatch())?
+//												new MSCATransition(sourcestate,  
+//														e.tra.getLabel().getAction(),
+//														operandstat2compstat.computeIfAbsent(targetlist, v->new CAState(v)),
+//														e.tra.getModality())
+//												:new MSCATransition(sourcestate, 
+//														e.tra.getLabel().getOfferer()<e.tra.getLabel().getRequester(), 
+//														e.tra.getLabel().getAction(),
+//														operandstat2compstat.computeIfAbsent(targetlist, v->new CAState(v)),
+//													 	e.tra.getModality()),
+//												targetlist);},
+//										toSet()),
+//								trm->{trm.addAll(matchtransitions.values().parallelStream()//matched transitions
+//										.flatMap(List::parallelStream)
+//										.filter(e->(!e.getValue().isEmpty())) //no duplicates
+//										.collect(toSet()));
+//								return trm;}));
+//
+//				if (trmap.parallelStream()//don't visit target states if they are bad
+//						.anyMatch(x->pruningPred!=null&&pruningPred.test(x.getKey())&&x.getKey().isUrgent()))
+//				{
+//					if (sourcestate.equals(initialstate))
+//						return null;
+//					continue;
+//				}
+//				else {//adding transitions, updating states
+//					tr.addAll(trmap.parallelStream()
+//							.filter(x->pruningPred==null||x.getKey().isNecessary()||pruningPred.negate().test(x.getKey()))//semicontrollable are not pruned
+//							.collect(Collectors.teeing(
+//									mapping((Entry<MSCATransition, List<CAState>> e)-> e.getKey(),toSet()), 
+//									mapping((Entry<MSCATransition, List<CAState>> e)-> e.getValue(),toSet()), 
+//									(trans,toVis)->{
+//										toVisit.addAll(toVis.parallelStream()
+//												.map(s->Map.entry(s,sourceEntry.getValue()+1))
+//												.collect(toSet()));
+//										if (pruningPred!=null)//avoid visiting targets of semicontrollable bad transitions
+//											dontvisit.addAll(trans.parallelStream()
+//													.filter(x->x.isSemiControllable()&&pruningPred.test(x))
+//													.map(MSCATransition::getTarget)
+//													.collect(toList()));
+//										return trans;
+//									})));
+//				}
+//			}
+//		} while (!toVisit.isEmpty());
+//
+//		int[][] finalstates = new int[rank][];
+//		int pointer=0;
+//		for (MSCA a : aut){
+//			System.arraycopy(a.getFinalStatesofPrincipals(), 0, finalstates, pointer,a.getRank());
+//			pointer+=a.getRank();
+//		}
+//		Set<CAState> states =visited.parallelStream()
+//				.map(l->operandstat2compstat.get(l))
+//				.collect(Collectors.toSet());
+//		return new MSCA(rank, initialstate, finalstates, tr, states);
+//	}
